# bookish-eureka

./: CMakeLists.txt  README.md  Untitled-1.ipynb  Untitled-2.ipynb  Untitled-3.ipynb  main.cc  open.py  open1.py  open2.py  open4.py  open5.py
